--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -10,10 +10,17 @@
   background-color: #282c34;
 }
 
+.title_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-around
+}
+
 .title {
   color: #61dafb;
   font-size: 1.5em;
-  margin-bottom: 10px;
+  margin: 0;
 }
 
 .no_bookmarks {
