--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -4,3 +4,11 @@
         transform: translateY(4px);
     }
 }
+
+.bookmark-indicator {
+    width: 13px;
+    height: 13px;
+    color: aqua;
+    border-radius: 50%;
+    background-color: rgb(38, 57, 200);
+}
