--- a/src/pages/Options/Options.css
+++ b/src/pages/Options/Options.css
@@ -5,4 +5,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+}
+
+.OptionsContent {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
