--- a/src/pages/Options/Options.css
+++ b/src/pages/Options/Options.css
@@ -1,6 +1,6 @@
 .OptionsContainer {
   width: 100%;
-  height: 50vh;
+  /* height: 50vh; */
   font-size: 2rem;
   display: flex;
   align-items: center;
@@ -25,4 +25,28 @@
   justify-content: center;
   flex-direction: row;
   cursor: pointer;
+}
+
+.BookmarkList {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3%;
+}
+
+.Bookmark {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 3%;
+}
+
+h3, p {
+  margin: 0;
 }
